--- a/css/slider.css
+++ b/css/slider.css
@@ -18,7 +18,6 @@
   border: 1px solid #d8d8d8;
   border-radius: 20%;
   height: 24px;
-  outline: none;
   z-index: 2;
   width: 24px;
 }
@@ -29,4 +28,8 @@
   display: block;
   position: absolute;
   background-color: #dadfe8;
+}
+
+.js-focus-visible :focus:not(.focus-visible) {
+  outline: 0;
 }
